data-platform-app-cot-view-lines-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-cot-view-lines-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "people-analytics"
    cloud-platform.justice.gov.uk/application: "cot-view-lines"
    cloud-platform.justice.gov.uk/owner: "people-analytics: peopleanalytics@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cot-view-lines"
    cloud-platform.justice.gov.uk/team-name: "cot_view_lines_admin"
    cloud-platform.justice.gov.uk/review-after: "DD-Mon-YY"
